Updated to new version.

--- a/index.html
+++ b/index.html
@@ -82,17 +82,35 @@
                 <li>
                     Einstieg: 5'
                 </li>
-                    <li>
-                        Workshop in Gruppen: 30'
-                    </li>
+                <li>
+                    Workshop in Gruppen: 40'
+                </li>
 
-                    <li>
-                        Austausch innerhalb der Grunt- bzw. Gulp-Gruppen: 5' - 10'
-                    </li>
+                <li>
+                    Vorstellung der Ergebnisse und Diskussion: 15'
+                </li>
+            </ul>
 
-                    <li>
-                        Vorstellung der Ergebnisse und Diskussion: 15' - 30'
-                    </li>
+            </p>
+        </section>
+
+        <section data-title="Ziele" class='left'>
+            <h2>The most important thing about goals is... having one</h2>
+            <p>
+            <ul>
+                <li>
+                    Die zwei wichtigen JavaScript Taskrunner kennen lernen
+                </li>
+                <li>
+                    Gängige Anforderungen an einem Beispiel umsetzen
+                </li>
+
+                <li>
+                    Die Unterschiede zwischen Grunt und Gulp kennen
+                </li>
+            <li>
+                Eine persönliche Präferenz finden ;-)
+            </li>
                 </ul>
 
             </p>
@@ -126,6 +144,11 @@
                     Effizienzsteigerung -> Mehr Zeit für das Wesentliche
                 </li>
 
+
+                <li>
+                    Build und Deployment sollte so einfach und automatisiert wie möglich sein
+                </li>
+
             </ul>
             </p>
         </section>
@@ -137,42 +160,34 @@
             </div>
         </section>
 
-        <section data-title="Gruppen" class='left'>
+        <section data-title="Gruppen und Ablauf" class='left'>
             <h2>TEAM - <strike>Toll Ein Anderer Machts!</strike></h2><h2>Together Everyone Achieves More!</h2>
             <p>
             <ul>
                 <li>
-                    Wenn möglich je zwei Gruppen zu Grunt und Gulp
+                    Mindestens je eine Gruppe zu Grunt und Gulp
                 </li>
                 <li>
                     Beispielprojekt auf GitHub
                 </li>
                 <li>
+                    Gulp: webplatformz -> gulp-workshop
+                </li>
+            <li>
+                Grunt: webplatformz -> grunt-workshop
+            </li>
+                <li>
                     Pro Gruppe ein Rechner
                 </li>
-            </ul>
+            <li>
+                Teams clonen das jeweilige Repo auf Github
+            </li>
 
-            </p>
-        </section>
+            <li>
+                Push ins Remote-Repo als Musterlösung
+            </li>
+        </ul>
 
-        <section data-title="Setup und Ablauf" class='left'>
-            <h2>TBD</h2>
-
-            <p>
-            <ul>
-                <li>
-                    Teams clonen das jeweilige Repo in der Organization auf Github (workshop-gulp bzw. workshop-grunt)
-                </li>
-
-                <li>
-                    Push ins Remote-Repo erst nach Austausch mit der anderen Gruppe
-                </li>
-
-                <li>
-                    Reihenfolge der Anforderungen: spielt keine Rolle
-                </li>
-
-            </ul>
             </p>
         </section>
 
@@ -181,19 +196,23 @@
 
             <p>
             <ul>
+                 <li>
+                    Node Server starten
+                 </li>
+
                 <li>
-                    Minify
+                    Tests ausführen
+                </li>
+                <li>
+                    Nach Änderungen am Code (HTML, JS, CSS...) Server neu starten und Seite im Browser neu laden
                 </li>
 
                 <li>
-                    Uglify
+                    Tests und JSHint bei Änderungen automatisch ausführen
                 </li>
 
                 <li>
-                    Restart
-                </li>
-                <li>
-                    Execute Tests... etc. to be filled out and defined
+                    Minify und Uglify von Javascript und CSS Dateien
                 </li>
 
             </ul>
