Updated to new version.

--- a/index.html
+++ b/index.html
@@ -197,22 +197,22 @@
             <p>
             <ul>
                  <li>
-                    Node Server starten
+                    Node Server starten.
                  </li>
 
                 <li>
-                    Tests ausführen
+                    Tests ausführen.
                 </li>
                 <li>
-                    Nach Änderungen am Code (HTML, JS, CSS...) Server neu starten und Seite im Browser neu laden
-                </li>
-
-                <li>
-                    Tests und JSHint bei Änderungen automatisch ausführen
+                    Nach Änderungen am Code (HTML, JS, CSS...) Server neu starten und Seite im Browser neu laden.
                 </li>
 
                 <li>
-                    Minify und Uglify von Javascript und CSS Dateien
+                    Tests und JSHint bei Änderungen automatisch ausführen.
+                </li>
+
+                <li>
+                    Minify und Uglify von Javascript und CSS Dateien, Kopieren des kompletten Builds in eigenes Verzeichnis. Verzeichnis zuvor cleanen.
                 </li>
 
             </ul>
