Minor time adjustments for workshop.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,15 @@
                     Einstieg: 5'
                 </li>
                 <li>
-                    Workshop in Gruppen: 40'
+                    Workshop in Gruppen: 45'
                 </li>
 
                 <li>
-                    Vorstellung der Ergebnisse und Diskussion: 15'
+                    Austausch innerhalb der Grunt bzw. Gulp-Gruppen: 10'
+                </li>
+
+                <li>
+                    Vorstellung der Ergebnisse und Diskussion: 20'
                 </li>
             </ul>
 
@@ -184,7 +188,7 @@
             </li>
 
             <li>
-                Push ins Remote-Repo als Musterlösung
+                Push ins Remote-Repo nach dem Austausch als Musterlösung
             </li>
         </ul>
 
