Minor presentation changes, added more infos on plugin hints.

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
         </section>
 
 
-
         <section data-state='orange'>
             <div class="zuehlke-center">
                 <div class="zuehlke-splash-title">Workshop organization</div>
-                <div class="zuehlke-splash-subtitle">Zeitplan, Gruppen und Setup</div>
+                <div class="zuehlke-splash-subtitle">Zeitplan und Ziele</div>
             </div>
         </section>
 
         <section data-title="Zeitplan" class='left'>
             <h2>Time you enjoy wasting is not wasted time</h2>
+
             <p>
             <ul>
                 <li>
@@ -100,6 +100,7 @@
 
         <section data-title="Ziele" class='left'>
             <h2>The most important thing about goals is... having one</h2>
+
             <p>
             <ul>
                 <li>
@@ -112,10 +113,10 @@
                 <li>
                     Die Unterschiede zwischen Grunt und Gulp kennen
                 </li>
-            <li>
-                Eine persönliche Präferenz finden ;-)
-            </li>
-                </ul>
+                <li>
+                    Eine persönliche Präferenz finden ;-)
+                </li>
+            </ul>
 
             </p>
         </section>
@@ -160,12 +161,15 @@
         <section data-state='orange'>
             <div class="zuehlke-center">
                 <div class="zuehlke-splash-title">Workshop</div>
-                <div class="zuehlke-splash-subtitle">Auf die Plätze...</div>
+                <div class="zuehlke-splash-subtitle">Setup und Anforderungen. Auf geht's!</div>
             </div>
         </section>
 
         <section data-title="Gruppen und Ablauf" class='left'>
-            <h2>TEAM - <strike>Toll Ein Anderer Machts!</strike></h2><h2>Together Everyone Achieves More!</h2>
+            <h2>TEAM - <strike>Toll Ein Anderer Machts!</strike></h2>
+
+            <h2>Together Everyone Achieves More!</h2>
+
             <p>
             <ul>
                 <li>
@@ -177,20 +181,20 @@
                 <li>
                     Gulp: webplatformz -> gulp-workshop
                 </li>
-            <li>
-                Grunt: webplatformz -> grunt-workshop
-            </li>
                 <li>
-                    Pro Gruppe ein Rechner
+                    Grunt: webplatformz -> grunt-workshop
                 </li>
-            <li>
-                Teams clonen das jeweilige Repo auf Github
-            </li>
+                <li>
+                    Pro Gruppe am besten mehr als ein Rechner
+                </li>
+                <li>
+                    Teams clonen das jeweilige Repo auf Github
+                </li>
 
-            <li>
-                Push ins Remote-Repo nach dem Austausch als Musterlösung
-            </li>
-        </ul>
+                <li>
+                    Push ins Remote-Repo nach dem Austausch als Musterlösung
+                </li>
+            </ul>
 
             </p>
         </section>
@@ -200,9 +204,9 @@
 
             <p>
             <ul>
-                 <li>
+                <li>
                     Node Server starten.
-                 </li>
+                </li>
 
                 <li>
                     Tests ausführen.
@@ -216,11 +220,21 @@
                 </li>
 
                 <li>
-                    Minify und Uglify von Javascript und CSS Dateien, Kopieren des kompletten Builds in eigenes Verzeichnis. Verzeichnis zuvor cleanen.
+                    Minify und Uglify von Javascript und CSS Dateien, Kopieren des kompletten Builds in eigenes
+                    Verzeichnis. Verzeichnis zuvor cleanen.
                 </li>
 
             </ul>
             </p>
+            <p>Anforderungen ebenfalls im Readme.md der Projekte. Hint.txt enthält Hinweise zu Plugins.</p>
+        </section>
+
+
+        <section data-state='orange'>
+            <div class="zuehlke-center">
+                <div class="zuehlke-splash-title">Thank you for attending!</div>
+                <div class="zuehlke-splash-subtitle">Feel free to gold-plate grunt and gulp files in the repo.</div>
+            </div>
         </section>
     </div>
 
